src/test/ui/generator/yield-in-args.stderr
error[E0624]: borrow may still be in use when generator yields
  --> $DIR/yield-in-args.rs:18:8
   |
18 |         foo(&b, yield); //~ ERROR
   |              ^  ----- possible yield occurs here

error: aborting due to previous error

